@@ -3879,6 +3879,53 @@ HOOK_METHOD_PRIORITY(PersistentGameData, AddChallenge, -9999, (int challengeid) 
 
 //ModCallbacks.MC_PRE_FAMILIAR_CAN_CHARM = 1473
 
+//MC_(PRE/POST)_RECORD_PLAYER_COMPLETION (1474/1475)
+HOOK_STATIC(Manager, RecordPlayerCompletion, (int completion) -> void, __stdcall) {
+	const int callbackid1 = 1474;
+	const int callbackid2 = 1475;
+	lua_State* L = g_LuaEngine->_state;
+	if (CallbackState.test(callbackid1 - 1000)) {
+
+		lua::LuaStackProtector protector(L);
+
+		lua_rawgeti(L, LUA_REGISTRYINDEX, g_LuaEngine->runCallbackRegistry->key);
+
+		lua::LuaResults result = lua::LuaCaller(L).push(callbackid1)
+			.push(completion)
+			.push(completion)
+			.call(1);
+
+		if (!result)
+		{
+			if (lua_isboolean(L, -1)) {
+				if (lua_toboolean(L, -1) == false)
+					return;
+			}
+			else if (lua_isinteger(L, -1)) {
+				int retCompletion = lua_tointeger(L, -1);
+				if (retCompletion >= 0 && retCompletion <= 17)
+					completion = retCompletion;
+				else
+					return;
+			}
+		}
+	}
+
+	super(completion);
+
+	if (CallbackState.test(callbackid2 - 1000)) {
+		lua_State* L = g_LuaEngine->_state;
+		lua::LuaStackProtector protector(L);
+
+		lua_rawgeti(L, LUA_REGISTRYINDEX, g_LuaEngine->runCallbackRegistry->key);
+
+		lua::LuaCaller(L).push(callbackid2)
+			.push(completion)
+			.push(completion)
+			.call(1);
+	}
+}
+
 //MC_POST_ACHIEVEMENT UNLOCK (1476)
 HOOK_METHOD_PRIORITY(PersistentGameData, TryUnlock, -9999, (int achievid) -> bool) {
 	bool deed = super(achievid);
